unpackaged/main/default/objects/Product__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product category this falls under</description>
    <label>Product type</label>
    <referenceTo>ProductType__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>