unpackaged/main/default/objects/Product__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The provider of this product</description>
    <label>Provider</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>