unpackaged/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReferenceName__c</columns>
    <columns>Sequence__c</columns>
    <columns>LegacyFinancialProductRecordTypeId__c</columns>
    <columns>ProductType__c</columns>
    <columns>Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>